--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -1,6 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-@import "../node_modules/bootstrap/scss/bootstrap.scss";
-
 *,
 *::after,
 *::after{
@@ -216,5 +213,187 @@ body {
     100% {
         opacity: 1;
         transform: translate(0);
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+    
+    100% {
+        opacity: 0;
+    }
+}
+// COMPS ////
+.main-container{
+    max-width: 120rem;
+    margin: 4rem auto;
+    background-color: var(--color-grey-light-1);
+    box-shadow: var(--shadow-dark);
+    min-height: 20rem;
+
+    // @media only screen and (max-width: $bp-lgst) {
+    //     margin: 0;
+    //     max-width: 100%;
+    //     width: 100%;
+    //     max-height: 100%;
+    // }
+}
+
+.header{
+    font-size: 1.4rem;
+    height: 12rem;
+    // background-color: #fff;
+    border-bottom: var(--line);
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.logo {
+    height: 8.25rem;
+    margin-left: 2rem;
+
+    &--left {
+        margin-right: 2rem;
+    }
+}
+
+.intro {
+    padding: 4rem 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+    h1, h2 {
+        text-transform: uppercase;
+        color: $color-black;
+    }
+
+    .autoras{ 
+        color: $color-black;
+        font-size: 2.2rem;
+    }
+
+    &--description {
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        font-size: 2rem;
+        color: $color-black;
+    }
+}
+
+/////////// Person //////////
+.person {
+    // display: none;
+    // opacity: 0;
+}
+
+///////// button ///////
+.btn {
+    &,
+    &:link,
+    &:visited {
+        text-transform: uppercase;
+        text-decoration: none;
+        padding: 1.5rem 4rem;
+        display: inline-block;
+        border-radius: 10rem;
+        transition: all .2s;
+        position: relative;
+        font-size: $default-font-size;
+
+        //Change for the <button> element
+        border: none;
+        cursor: pointer;
+    }
+    
+    &:hover {
+        transform: translateY(-3px);
+        box-shadow: 0 1rem 2rem rgba($color-black, .2);
+        &::after{
+            transform: scaleX(1.4) scaleY(1.6);
+            opacity: 0;
+        }
+    }
+    
+    &:active,
+    &:focus {
+        outline: none;
+        transform: translateY(-1px);
+        box-shadow: 0 0.5rem 1rem rgba($color-black, .2);
+    }
+    
+    &--white {
+        background-color: $color-white;
+        color: $color-grey-dark;
+        &::after{
+            background-color: $color-white;
+        }
+    }
+    
+    &--green {
+        background-color: var(--color-primary);
+        color: $color-white;
+        &::after{
+            background-color: var(--color-primary);
+        }
+    }
+    
+    &::after {
+        content: "";
+        display: inline-block;
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        border-radius: 10rem;
+        z-index: -1;
+        transition: all .4s;
+    }
+    
+    &--animated {
+        animation: moveDown .5s ease-out .75s;
+        animation-fill-mode: backwards ;
+    }
+}
+
+.btn-text {
+    &:link,
+    &:visited {
+        font-size: $default-font-size;
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding: 3px;
+        transition: all .2s;
+    }
+
+    &:hover {
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, .15);
+        transform: translateY(-2px);
+    }
+
+    &:active{
+        box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+        transform: translateY(0);
     }
 }
