--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -299,8 +299,60 @@ body {
 
 /////////// Person //////////
 .person {
-    // display: none;
-    // opacity: 0;
+    .formulario{
+        display: flex;
+        flex-direction: column;
+        padding: 2rem;
+    }
+    
+    .group {
+        display: flex;
+    }
+
+    .input-container{
+        width: 100%;
+    }
+
+    .form-group {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 1.5rem;
+        width: 50%;
+
+        label {
+            color: $color-black;
+            font-size: 1.6rem;
+            margin-bottom: 1rem;
+        }
+
+        input {
+            width: 50%;
+            font-size: 1.5rem;
+            font-family: inherit;
+            border-radius: 2px;
+            background-color: rgba($color-white, .5);
+            border: none;
+            border-bottom: 3px solid transparent;
+            transition: all .3s;
+            margin: 0 auto;
+
+            &:focus:invalid  {
+                border-bottom: 3px solid $color-secondary-dark;
+            }
+            
+            &:focus {
+                outline: none;
+                box-shadow: 0 1rem 2rem rgba($color-black, .1);
+                border-bottom: 3px solid $color-primary;
+            }
+        }
+
+        .text-danger {
+            display: block;
+            text-align: center;
+        }
+    }
 }
 
 ///////// button ///////
