--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -311,6 +311,7 @@ body {
 
     .input-container{
         width: 100%;
+        text-align: center;
     }
 
     .form-group {
@@ -326,7 +327,7 @@ body {
             margin-bottom: 1rem;
         }
 
-        input {
+        input, select {
             width: 50%;
             font-size: 1.5rem;
             font-family: inherit;
@@ -346,6 +347,11 @@ body {
                 box-shadow: 0 1rem 2rem rgba($color-black, .1);
                 border-bottom: 3px solid $color-primary;
             }
+        }
+
+        select {
+            color: #6c757d;
+            opacity: 1;
         }
 
         .text-danger {
