--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -131,8 +131,7 @@ body {
     background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
-
-    min-height: 100vh;
+    min-height: 100%;
     box-sizing: border-box;
 }
 
@@ -249,6 +248,30 @@ body {
     //     width: 100%;
     //     max-height: 100%;
     // }
+
+    .con {
+        display: block;
+        position: relative;
+        width: 90%;
+        margin: 5rem auto;
+        background-color: rgba($color-white, .2);
+        box-shadow: 0 1rem 2rem rgba($color-black, .3);
+        // height: 20rem;
+        color: $color-black;
+        padding: 2.5rem;
+
+        h1,h2,h3 {
+            text-align: center;
+            font-weight: 600;
+        }
+        p, li {
+            font-size: 1.6rem;
+            text-align: justify;
+        }
+        li {
+            margin-left: 1.6rem;
+        }
+    }
 }
 
 .header{
@@ -359,6 +382,14 @@ body {
             text-align: center;
         }
     }
+}
+
+.alert {
+    width: 25%;
+    position: absolute;
+    top: -20px;
+    left: 0;
+    font-size: 1.2rem;
 }
 
 ///////// button ///////
