--- a/src/styles.scss
+++ b/src/styles.scss
@@ -135,7 +135,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 
-    min-height: 100vh;
+    min-height: 100%;
     box-sizing: border-box;
 }
 
