--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -198,12 +198,200 @@
     <p class="mt-4">En caso de experimentar una angustia mayor, al finalizar los cuestionarios el participante una
       dirección (e-mail) de contacto de alguno de los investigadores, quienes le proporcionarán la información y apoyo
       necesario para que pueda obtener ayuda.</p>
-    <p class="mt-4">Tenga en cuenta que su hijo es libre de abandonar la investigación en cualquier momento, incluso si ya terminó de responder.</p>
+    <p class="mt-4">Tenga en cuenta que su hijo es libre de abandonar la investigación en cualquier momento, incluso si
+      ya terminó de responder.</p>
+    <p class="my-4">Todo lo mencionado en este aparte, atiende entonces, lo establecido en el “Capítulo V. De las
+      investigaciones en grupos subordinados” (Artículos 45 y 46), de la Resolución 8430 (Ministerio de Salud, 1993)
+      “Por la cual se establecen las normas científicas, técnicas y administrativas para la investigación en salud”.
+    </p>
+    <h3>BENEFICIOS</h3>
+    <p class="my-4">Esta investigación no representa beneficios inmediatos, económicos, políticos o laborales para los y
+      las participantes. Sin embargo, se espera que los resultados contribuyan con el desarrollo de la disciplina de la
+      psicología en los campos de la salud y organizacional y del trabajo. Consecuente con esto, se espera en el mediano
+      y largo plazo, contribuir con el mejoramiento de la calidad de vida estudiantil y la salud académica.</p>
+    <h3>¿CÓMO SERÁ LA PARTICIPACIÓN DE SU HIJO EN LA INVESTIGACIÓN?</h3>
+    <p class="my-4">
+      La participación de su hijo consiste en diligenciar los cuestionarios mencionados. Esto esto le tomará
+      aproximadamente 1 hora, dependiendo de la velocidad de respuesta. No hay respuestas ni buenas ni malas.
+    </p>
+    <h3>GARANTÍAS DE LA PARTICIPACIÓN DE SU HIJO</h3>
+    <p class="mt-4">La participación de su hijo es completamente voluntaria y requiere de su previa autorización, además
+      él tendrá el derecho de retirarse en cualquier momento, si así lo desea. Igualmente, si en algún momento desea que
+      la información que brinde no sea utilizada por los investigadores, lo podrá comunicar y se respetará su decisión.
+    </p>
+    <p class="mt-4">Si se encuentra interesado en los resultados de la investigación de su hijo, puede contactar a
+      juliethgarzon@usantotomas.edu.co - 3156521775, karen.laverde@usantotomas.edu.co - 3108006401,
+      camilarada@usantotomás.edu.co - 3045471875, investigadores. De la misma forma, para informar de cualquier
+      situación anormal o inesperada en cualquier momento. </p>
+    <p class="mt-4">Por último, dadas las características de la investigación, su propósito y vinculación de los
+      investigadores, al dar ACEPTAR en el presente consentimiento informado, se autoriza a los investigadores para:</p>
+    <ul class="my-4">
+      <li>
+        Realizar los procedimientos descritos en este documento a partir del diligenciamiento de su hijo
+      </li>
+      <li>
+        Publicar los resultados de la investigación en revistas académicas o de divulgación.
+      </li>
+      <li>
+        Hacer referencia a la investigación en eventos de circulación del conocimiento (por ejemplo, programas de radio,
+        conferencias, ponencias, foros, simposios, pósteres, etc.).
+      </li>
+    </ul>
+    <h3>INFORMACIÓN O PREGUNTAS ADICIONALES</h3>
+    <p class="mt-4">Si en algún momento desea obtener información adicional sobre el estudio puede contactar a:</p>
+    <ul class="my-4">
+      <li>
+        camilarada@usantotomás.edu.co - 3045471875.
+      </li>
+      <li>
+        juliethgarzon@usantotomas.edu.co - 3156521775.
+      </li>
+      <li>
+        karen.laverde@usantotomas.edu.co - 3108006401.
+      </li>
+    </ul>
+    <p>En caso de emergencia, o afectación de tipo psicológico derivada de la presente investigación, el usuario podrá
+      comunicarse con la línea del Servicio de Atención Psicológica - SAP 5878797 ext. 1941 / 1942 para comunicarse con
+      un profesional en psicología. Una copia de este consentimiento informado será enviada al correo electrónico desde
+      el cual sea respondido el mismo.</p>
   </div>
   <div style="height: 1rem;" *ngIf="con1">&nbsp;</div>
   <div class="con con2" id="con2" *ngIf="con2">
-    <h1 class="con-title">SÍNDROME DE BURNOUT, FUNCIONAMIENTO FAMILIAR Y RENDIMIENTO ACADÉMICO EN ESTUDIANTES DEL
-      PROGRAMA DE PSICOLOGÍA DE LA UNIVERSIDAD SANTO TOMÁS</h1>
+    <div class="alert alert-dark" role="alert">
+      INFORMACIÓN PARA ESTUDIANTES
+    </div>
+    <h2>SÍNDROME DE BURNOUT, FUNCIONAMIENTO FAMILIAR Y RENDIMIENTO ACADÉMICO EN ESTUDIANTES DEL PROGRAMA DE PSICOLOGÍA
+      DE LA UNIVERSIDAD SANTO TOMÁS</h2>
+    <h3 class="my-4">FACULTAD DE PSICOLOGÍA <br> UNIVERSIDAD SANTO TOMÁS (USTA)</h3>
+    <p>Estamos solicitando su colaboración como participante en el proyecto de investigación <b>Síndrome de burnout,
+        funcionamiento familiar y rendimiento académico en estudiantes del programa de psicología de la Universidad
+        Santo Tomás.</b> Este proyecto es avalado por la Universidad Santo Tomás. Su participación es completamente
+      voluntaria y la información aquí consignada se mantendrá anónima, es confidencial y sólo será utilizada con fines
+      de investigación. El tiempo estimado para la finalización de los cuestionarios es de aproximadamente una hora. Si
+      Usted decide responder, significa que Usted ha leído y firmado el formato de consentimiento informado y participa
+      voluntariamente. </p>
+    <h3 class="my-4">CONSENTIMIENTO INFORMADO <sup>1</sup> </h3>
+    <h3>Documento de consentimiento informado para participación en el estudio y aplicación de los instrumentos
+      Maslach Burnout Inventory (MBI- Student) y
+      Percepción del Funcionamiento Familiar (APGAR-Familiar)
+    </h3>
+
+    <ul class="my-4">
+      <li>
+        Por favor, lea cuidadosamente esta información sobre el proyecto de investigación titulado síndrome de burnout,
+        funcionamiento familiar y rendimiento académico.
+      </li>
+      <li>
+        Siéntase en completa libertad de preguntar, al personal de la investigación, todo aquello que no entienda.
+      </li>
+      <li>
+        Una vez haya comprendido la información, se le preguntará si desea participar de la investigación. En caso
+        afirmativo, seleccione ACEPTAR y proceda al diligenciamiento de las variables sociodemográficas y los
+        cuestionarios.
+      </li>
+    </ul>
+    <h3>RESUMEN DE LA INVESTIGACIÓN PROPUESTA</h3>
+    <p class="my-4">La investigación propuesta tiene como objetivo correlacionar el síndrome de burnout con el
+      funcionamiento familiar y el rendimiento académico de los estudiantes, con el fin de establecer la magnitud del
+      efecto recíproco para con el síndrome. El muestreo será no-probabilístico por conveniencia y se trabajará de forma
+      no interventiva. La información se analizará a través de los coeficientes de correlación bivariada y multivariada.
+      En cuanto a las estrategias de recolección de la información se tomará: 1) El síndrome de Burnout se medirá a
+      través del cuestionario Maslach Burnout Inventory (MBI-Student), que considera las dimensiones de Agotamiento,
+      Actitud negativa, Cinismo y Autoeficacia académica. 2) La percepción del funcionamiento familiar se indaga por
+      medio del cuestionario APGAR-Familiar, que mide Adaptación (A), Participación (P), Gradiente de Recursos (G),
+      Afectividad (A) y Recursos o Capacidad Resolutiva (R).</p>
+    <h3>OBJETIVO</h3>
+    <p class="my-4">Correlacionar las variables síndrome de burnout, funcionamiento familiar y rendimiento académico, en
+      estudiantes del programa de Psicología de la Universidad Santo Tomás del campus universitario San Alberto Magno,
+      con el fin de establecer la magnitud del efecto individual y en conjunto con éste síndrome.</p>
+    <h3>¿POR QUÉ USTED PUEDE PARTICIPAR EN ESTA INVESTIGACIÓN?</h3>
+    <p class="mt-4">Usted puede participar en esta investigación si cumple con los siguientes requisitos:</p>
+    <ul class="my-4">
+      <li>Es mayor de 18 años o de ser menor, tiene el consentimiento de su padre para su participación.</li>
+      <li>Se encuentra en compañía de un testigo mayor de edad al momento de diligenciar el presente consentimiento o
+        asentimiento informado.</li>
+      <li>Es actualmente estudiante del programa de psicología de la Universidad Santo Tomás- Bogotá </li>
+    </ul>
+    <h3>RIESGOS</h3>
+    <p class="mt-4">Esta investigación, de acuerdo al Artículo 11 de la Resolución 8430 (Ministerio de Salud, 1993), es
+      de riesgo mínimo. Algunos participantes podrán experimentar angustia leve y pasajera mientras responden los
+      cuestionarios al recordar eventos negativos de su experiencia personal y/o estudiantil. Sin embargo,
+      investigaciones que han usado metodologías e instrumentos similares no han reportado eventos estresantes por parte
+      de los participantes.</p>
+    <p class="mt-4">En caso de experimentar una angustia mayor, al finalizar los cuestionarios encontrará una dirección
+      (e-mail) de contacto de alguno de los investigadores, quienes le proporcionarán la información y apoyo necesario
+      para que pueda obtener ayuda.</p>
+    <p class="mt-4">Tenga en cuenta que Usted es libre de abandonar la investigación en cualquier momento, incluso si ya
+      terminó de responder.</p>
+    <p class="my-4">Todo lo mencionado en este aparte, atiende entonces, lo establecido en el “Capítulo V. De las
+      investigaciones en grupos subordinados” (Artículos 45 y 46), de la Resolución 8430 (Ministerio de Salud, 1993)
+      “Por la cual se establecen las normas científicas, técnicas y administrativas para la investigación en salud”.
+    </p>
+    <h3>BENEFICIOS</h3>
+    <p class="my-4">Esta investigación no representa beneficios inmediatos, económicos, políticos o laborales para los y
+      las participantes. Sin embargo, se espera que los resultados contribuyan con el desarrollo de la disciplina de la
+      psicología en los campos de la salud y organizacional y del trabajo. Consecuente con esto, se espera en el mediano
+      y largo plazo, contribuir con el mejoramiento de la calidad de vida estudiantil y la salud académica.</p>
+    <h3>¿CÓMO SERÁ SU PARTICIPACIÓN EN LA INVESTIGACIÓN?</h3>
+    <p class="my-4">
+      Su participación consiste en diligenciar los cuestionarios mencionados. Esto esto le tomará aproximadamente 1
+      hora, dependiendo de la velocidad de respuesta. Usted debe responder de la manera más honesta posible. No hay
+      respuestas ni buenas ni malas.
+    </p>
+    <h3>GARANTÍAS DE SU PARTICIPACIÓN</h3>
+    <ul class="my-4">
+      <li>
+        La información que Usted comparta con nosotros será confidencial y anónima.
+      </li>
+      <li>
+        Nada le obliga a compartir la información.
+      </li>
+      <li>
+        Ninguno de los datos por usted brindados se usará para identificarle.
+      </li>
+    </ul>
+    <p>Toda la información que se obtenga de ésta investigación se utilizará únicamente con el propósito que aquí se
+      comenta. Los investigadores son los únicos autorizados para acceder a los datos que Usted suministre.</p>
+    <p class="mt-4">
+      Su participación es completamente voluntaria y tendrá el derecho de retirarse en cualquier momento, si Usted lo
+      desea. Igualmente, si en algún momento desea que la información que brinda no sea utilizada por los
+      investigadores, lo podrá comunicar y se respetará su decisión.
+    </p>
+    <p class="mt-4">Si se encuentra interesado en los resultados de la investigación puede contactar a
+      juliethgarzon@usantotomas.edu.co - 3156521775, karen.laverde@usantotomas.edu.co - 3108006401,
+      camilarada@usantotomás.edu.co - 3045471875, investigador. De la misma forma, para informar de cualquier situación
+      anormal o inesperada en cualquier momento.</p>
+    <p class="mt-4">Por último, dadas las características de la investigación, su propósito y vinculación de los
+      investigadores, al dar ACEPTAR en el presente consentimiento informado, se autoriza a los investigadores para:</p>
+    <ul class="my-4">
+      <li>
+        Realizar los procedimientos descritos en este documento.
+      </li>
+      <li>
+        Publicar los resultados de la investigación en revistas académicas o de divulgación.
+      </li>
+      <li>
+        Hacer referencia a la investigación en eventos de circulación del conocimiento (por ejemplo, programas de radio,
+        conferencias, ponencias, foros, simposios, pósteres, etc.).
+      </li>
+    </ul>
+    <h3>INFORMACIÓN O PREGUNTAS ADICIONALES</h3>
+    <p class="mt-4">Si en algún momento desea obtener información adicional sobre el estudio puede contactar a:</p>
+    <ul class="my-4">
+      <li>
+        camilarada@usantotomás.edu.co - 3045471875.
+      </li>
+      <li>
+        juliethgarzon@usantotomas.edu.co - 3156521775.
+      </li>
+      <li>
+        karen.laverde@usantotomas.edu.co - 3108006401.
+      </li>
+    </ul>
+    <p>En caso de emergencia, o afectación de tipo psicológico derivada de la presente investigación, el usuario podrá
+      comunicarse con la línea del Servicio de Atención Psicológica - SAP 5878797 ext. 1941 / 1942 para comunicarse con
+      un profesional en psicología. Una copia de este consentimiento informado será enviada al correo electrónico desde
+      el cual sea respondido el mismo.</p>
 
   </div>
   <div style="height: 1rem;" *ngIf="con2">&nbsp;</div>
