--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -394,10 +394,10 @@ body {
 }
 
 .alert {
-    width: 25%;
+    width: fit-content;
     position: absolute;
-    top: -20px;
-    left: 37px;
+    top: -27px;
+    left: 2%;
     font-size: 1.2rem;
     @include respond(phone) {
         left: 50%;
