--- a/src/app/components/info/info.component.html
+++ b/src/app/components/info/info.component.html
@@ -121,7 +121,7 @@
           </div>
           <div class="form-group">
             <label class="">&nbsp;</label>
-            <div class="input-group w-50">
+            <div class="input-group input-group-person">
               <button type="submit" class="btn btn-outline-primary btn-block">
                 Guardar
               </button>
@@ -254,6 +254,83 @@
       comunicarse con la línea del Servicio de Atención Psicológica - SAP 5878797 ext. 1941 / 1942 para comunicarse con
       un profesional en psicología. Una copia de este consentimiento informado será enviada al correo electrónico desde
       el cual sea respondido el mismo.</p>
+      <form autocomplete="off" [formGroup]="formCon" (ngSubmit)="saveCon()">
+        <div class="formulario">
+          <div class="group">
+            <div class="form-group">
+              <label for="" class="">Documento de identidad del estudiante:</label>
+              <div class="input-container">
+                <input type="number" class="form-control" placeholder="Documento de identidad" formControlName="numDoc"
+                  [class.is-invalid]="numDoc2NoValido">
+                <small *ngIf="numDoc2NoValido" class="text-danger">
+                  Ingrese un documento valido
+                </small>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="" class="">Código</label>
+              <div class="input-container">
+                <input type="number" class="form-control" placeholder="Ingrese su código" formControlName="codEst"
+                  [class.is-invalid]="codEst2NoValido">
+                <small *ngIf="codEst2NoValido" class="text-danger">
+                  Ingrese un código valido
+                </small>
+              </div>
+            </div>
+  
+          </div>
+          <div class="group">
+            <div class="form-group">
+              <label for="nombreTestigo" class="">Nombre del Testigo</label>
+              <div class="input-container">
+                <input type="text" class="form-control" placeholder="Nombre del testigo"
+                  formControlName="nombreTestigo" [class.is-invalid]="nombreTestigoNoValido">
+                <small *ngIf="nombreTestigoNoValido" class="text-danger">
+                  Ingrese nombre y apellido
+                </small>
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="numDocTestigo" class="">Documento de Identidad</label>
+              <div class="input-container">
+                <input type="number" class="form-control" placeholder="Escriba su documento de identidad"
+                  formControlName="numDocTestigo" [class.is-invalid]="numDocTestigoNoValido">
+                <small *ngIf="numDocTestigoNoValido" class="text-danger">
+                  Ingrese un documento valido
+                </small>
+              </div>
+            </div>
+          </div>
+          <div class="group">
+            <div class="form-group">
+              <label for="email" class="">Correo Electrónico</label>
+              <div class="input-container input-email">
+                <input type="email" class="form-control email" placeholder="Escriba su correo electrónico"
+                  formControlName="email" [class.is-invalid]="emailNoValido">
+                <small *ngIf="emailNoValido" class="text-danger">
+                  Ingrese un correo valido
+                </small>
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="">&nbsp;</label>
+              <div class="input-group justify-content-center">
+                <button type="submit" class="btn btn-outline-success btn-block w-auto">
+                  ACEPTO
+                </button>
+                <button type="submit" class="btn btn-outline-danger btn-block w-auto">
+                  NO ACEPTO
+                </button>
+              </div>
+              <!-- <div class="input-group w-50">
+                <button type="submit" class="btn btn-danger btn-block">
+                  NO ACEPTO
+                </button>
+              </div> -->
+            </div>
+          </div>
+        </div>
+      </form>
   </div>
   <div style="height: 1rem;" *ngIf="con1">&nbsp;</div>
   <div class="con con2" id="con2" *ngIf="con2">
