--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -1,10 +1,11 @@
 *,
 *::after,
-*::after{
+*::after {
     margin: 0;
     padding: 0;
     box-sizing: inherit;
 }
+
 ////////// variables /////////
 :root {
     --color-primary: #62a5eb;
@@ -20,11 +21,12 @@
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
 
-    --shadow-dark: 0 2rem 6rem rgba(0,0,0,0.3);
-    --shadow-light:  0 2rem 5rem rgba(0,0,0,.06);
+    --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+    --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
 
     --line: 1px solid var(--color-grey-light-2);
 }
+
 // COLORS
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
@@ -53,9 +55,10 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
+
 /////////////////////// MIXINS ////////////
 @mixin clearfix {
-    &::after{
+    &::after {
         content: "";
         display: table;
         clear: both;
@@ -91,33 +94,54 @@ $breakpoint arguement choices:
 ORDER: Base + typography > general layout + grid > page layout > components
 */
 @mixin respond($breakpoint) {
-    @if $breakpoint == phone {
-        @media only screen and (max-width: 37.5em) { @content }; //600px = 37.5em
+    @if $breakpoint==phone {
+        @media only screen and (max-width: 37.5em) {
+            @content
+        }
+
+        ; //600px = 37.5em
     }
-    @if $breakpoint == tab-port {
-        @media only screen and (max-width: 56.25em) { @content }; //900px = 56.25em
+
+    @if $breakpoint==tab-port {
+        @media only screen and (max-width: 56.25em) {
+            @content
+        }
+
+        ; //900px = 56.25em
     }
-    @if $breakpoint == tab-land {
-        @media only screen and (max-width: 75em) { @content }; //1200px = 75em
+
+    @if $breakpoint==tab-land {
+        @media only screen and (max-width: 75em) {
+            @content
+        }
+
+        ; //1200px = 75em
     }
-    @if $breakpoint == big-desktop {
-        @media only screen and (min-width: 112.5em) { @content }; //1800px = 112.5em
+
+    @if $breakpoint==big-desktop {
+        @media only screen and (min-width: 112.5em) {
+            @content
+        }
+
+        ; //1800px = 112.5em
     }
 }
 
 ////////////////////// Base ////////////////////////////
 
- 
+
 html {
     // This defines what 1rem is
     font-size: 62.5%; //1rem = 10px;
-    
+
     @include respond (big-desktop) {
         font-size: 80%; //1rem = 12px;
     }
+
     @include respond (tab-land) {
         font-size: 56.25%; //1 rem = 9px;
     }
+
     @include respond (tab-port) {
         font-size: 50%; // 1 rem = 8px;
     }
@@ -146,31 +170,41 @@ body {
 
 ////////////////////// Utilities ////////////////////////////
 
-.u-center-text { text-align: center !important; }
-.u-margin-bottom-small { 
-    margin-bottom: 1.5rem !important; 
+.u-center-text {
+    text-align: center !important;
+}
+
+.u-margin-bottom-small {
+    margin-bottom: 1.5rem !important;
 
     @include respond(phone) {
-        margin-bottom: .5rem !important; 
+        margin-bottom: .5rem !important;
     }
 }
-.u-margin-bottom-medium { 
-    margin-bottom: 4rem !important; 
-    
+
+.u-margin-bottom-medium {
+    margin-bottom: 4rem !important;
+
     @include respond(tab-port) {
         margin-bottom: 3rem !important;
     }
 }
-.u-margin-bottom-big { 
-    margin-bottom: 8rem !important; 
+
+.u-margin-bottom-big {
+    margin-bottom: 8rem !important;
 
     @include respond(tab-port) {
         margin-bottom: 5rem !important;
     }
 }
 
-.u-margin-top-big { margin-top: 8rem !important; }
-.u-margin-top-huge { margin-top: 10rem !important; }
+.u-margin-top-big {
+    margin-top: 8rem !important;
+}
+
+.u-margin-top-huge {
+    margin-top: 10rem !important;
+}
 
 //////////////// Animiations ////////////////////
 
@@ -183,12 +217,13 @@ body {
     80% {
         transform: translateX(1rem);
     }
-    
+
     100% {
         opacity: 1;
         transform: translate(0);
     }
 }
+
 @keyframes moveInRight {
     0% {
         opacity: 0;
@@ -198,18 +233,19 @@ body {
     80% {
         transform: translateX(-1rem);
     }
-    
+
     100% {
         opacity: 1;
         transform: translate(0);
     }
 }
+
 @keyframes moveDown {
     0% {
         opacity: 0;
         transform: translateY(3px);
     }
-    
+
     100% {
         opacity: 1;
         transform: translate(0);
@@ -220,7 +256,7 @@ body {
     0% {
         opacity: 0;
     }
-    
+
     100% {
         opacity: 1;
     }
@@ -230,21 +266,23 @@ body {
     0% {
         opacity: 1;
     }
-    
+
     100% {
         opacity: 0;
     }
 }
+
 // COMPS ////
-.main-container{
+.main-container {
     max-width: 120rem;
     margin: 4rem auto;
     background-color: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
     min-height: 20rem;
     border-radius: 40px;
-    overflow-x: hidden;
-    @include respond(phone){
+    overflow: hidden;
+
+    @include respond(phone) {
         border-radius: 20px;
     }
 
@@ -266,25 +304,31 @@ body {
         color: $color-black;
         padding: 2.5rem;
         border-radius: 30px;
-        @include respond(phone){
+
+        @include respond(phone) {
             border-radius: 15px;
         }
 
-        h1,h2,h3 {
+        h1,
+        h2,
+        h3 {
             text-align: center;
             font-weight: 600;
         }
-        p, li {
+
+        p,
+        li {
             font-size: 1.6rem;
             text-align: justify;
         }
+
         li {
             margin-left: 1.6rem;
         }
     }
 }
 
-.header{
+.header {
     font-size: 1.4rem;
     height: 12rem;
     // background-color: #fff;
@@ -316,12 +360,14 @@ body {
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    h1, h2 {
+
+    h1,
+    h2 {
         text-transform: uppercase;
         color: $color-black;
     }
 
-    .autoras{ 
+    .autoras {
         color: $color-black;
         font-size: 2.2rem;
     }
@@ -335,68 +381,98 @@ body {
 }
 
 /////////// Person //////////
-.person {
-    .formulario{
-        display: flex;
-        flex-direction: column;
-        padding: 2rem;
-    }
-    
-    .group {
-        display: flex;
-    }
+.formulario {
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+}
 
-    .input-container{
-        width: 100%;
-        text-align: center;
-    }
-
-    .form-group {
-        display: flex;
+.group {
+    display: flex;
+    @include respond(phone) {
         flex-direction: column;
-        align-items: center;
-        margin-bottom: 1.5rem;
+    }
+}
+
+.input-container {
+    width: 100%;
+    text-align: center;
+}
+
+.input-group {
+    width: 100%;
+
+    &-person {
         width: 50%;
 
-        label {
-            color: $color-black;
-            font-size: 1.6rem;
-            margin-bottom: 1rem;
-        }
-
-        input, select {
-            width: 50%;
-            font-size: 1.5rem;
-            font-family: inherit;
-            border-radius: 2px;
-            background-color: rgba($color-white, .5);
-            border: none;
-            border-bottom: 3px solid transparent;
-            transition: all .3s;
-            margin: 0 auto;
-
-            &:focus:invalid  {
-                border-bottom: 3px solid $color-secondary-dark;
-            }
-            
-            &:focus {
-                outline: none;
-                box-shadow: 0 1rem 2rem rgba($color-black, .1);
-                border-bottom: 3px solid $color-primary;
-            }
-        }
-
-        select {
-            color: #6c757d;
-            opacity: 1;
-        }
-
-        .text-danger {
-            display: block;
-            text-align: center;
+        @include respond(phone) {
+            width: 100%;
         }
     }
 }
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 1.5rem;
+    width: 50%;
+    @include respond(phone) {
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    label {
+        color: $color-black;
+        font-size: 1.6rem;
+        margin-bottom: 1rem;
+    }
+
+    input,
+    select {
+        width: 60%;
+        font-size: 1.5rem;
+        font-family: inherit;
+        border-radius: 2px;
+        background-color: rgba($color-white, .5);
+        border: none;
+        border-bottom: 3px solid transparent;
+        transition: all .3s;
+        margin: 0 auto;
+
+        &:focus:invalid {
+            border-bottom: 3px solid $color-secondary-dark;
+        }
+
+        &:focus {
+            outline: none;
+            box-shadow: 0 1rem 2rem rgba($color-black, .1);
+            border-bottom: 3px solid $color-primary;
+        }
+
+        @include respond(phone) {
+            width: 100%;
+        }
+    }
+
+    select {
+        color: #6c757d;
+        opacity: 1;
+    }
+
+    .text-danger {
+        display: block;
+        text-align: center;
+    }
+    .email {
+        font-weight: 900;
+        font-size: 2rem;
+        &::-webkit-input-placeholder, &::placeholder {
+            font-size: 1.5rem;
+        }
+    }
+}
+
 
 .alert {
     width: auto;
@@ -404,6 +480,7 @@ body {
     top: -27px;
     left: 2%;
     font-size: 1.2rem;
+
     @include respond(phone) {
         left: 50%;
         transform: translateX(-50%);
@@ -412,6 +489,7 @@ body {
 
 ///////// button ///////
 .btn {
+
     &,
     &:link,
     &:visited {
@@ -428,39 +506,42 @@ body {
         border: none;
         cursor: pointer;
     }
-    
+
     &:hover {
         transform: translateY(-3px);
         box-shadow: 0 1rem 2rem rgba($color-black, .2);
-        &::after{
+
+        &::after {
             transform: scaleX(1.4) scaleY(1.6);
             opacity: 0;
         }
     }
-    
+
     &:active,
     &:focus {
         outline: none;
         transform: translateY(-1px);
         box-shadow: 0 0.5rem 1rem rgba($color-black, .2);
     }
-    
+
     &--white {
         background-color: $color-white;
         color: $color-grey-dark;
-        &::after{
+
+        &::after {
             background-color: $color-white;
         }
     }
-    
+
     &--green {
         background-color: var(--color-primary);
         color: $color-white;
-        &::after{
+
+        &::after {
             background-color: var(--color-primary);
         }
     }
-    
+
     &::after {
         content: "";
         display: inline-block;
@@ -473,14 +554,15 @@ body {
         z-index: -1;
         transition: all .4s;
     }
-    
+
     &--animated {
         animation: moveDown .5s ease-out .75s;
-        animation-fill-mode: backwards ;
+        animation-fill-mode: backwards;
     }
 }
 
 .btn-text {
+
     &:link,
     &:visited {
         font-size: $default-font-size;
@@ -499,7 +581,7 @@ body {
         transform: translateY(-2px);
     }
 
-    &:active{
+    &:active {
         box-shadow: 0 .5rem 1rem rgba($color-black, .15);
         transform: translateY(0);
     }
