--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -46,6 +46,7 @@ $color-grey-dark-2: #999;
 $color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
+$color-orange: rgb(220, 134, 5);
 
 // FONT
 $default-font-size: 1.6rem;
@@ -151,7 +152,8 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     line-height: 1.6;
-    color: var(--color-grey-dark-2);
+    // color: var(--color-grey-dark-2);
+    color: $color-black;
     background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
@@ -473,6 +475,89 @@ body {
     }
 }
 
+.test {
+    width: 90%;
+    margin: 5rem auto;
+    h1, h3 {
+        color: $color-black;
+    }
+    
+    h1 {
+        text-align: center;
+    }
+
+    .question-box {
+        width: 80%;
+        margin: 0 auto;
+        margin-top: 1.5rem;
+        border-bottom: 1px solid rgba(0,0,0,0.5);
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        .answer-box {
+            display: flex;
+            flex-direction: row;
+            .answer {
+                &:not(:last-child) {
+                    margin-right: 2rem;
+                }
+
+                .form__radio-input {
+                    display: none;
+                }
+        
+                .form__radio-label {
+                    font-size: $default-font-size;
+                    cursor: pointer;
+                    position: relative;
+                    padding-right: 2.5rem;
+                }
+                .form__radio-button {
+                    height: 2rem;
+                    width: 2rem;
+                    border: 2.5px solid $color-primary;
+                    border-radius: 50%;
+                    display: inline-block;
+                    position: absolute;
+                    right: 0;
+                    top: .2rem;
+            
+                    &::after {
+                        content: "";
+                        display: block;
+                        height: 1rem;
+                        width: 1rem;
+                        border-radius: 50%;
+                        position: absolute;
+                        top: 50%;
+                        left: 50%;
+                        transform: translate(-50%, -50%);
+                        background-color: $color-primary;
+                        opacity: 0;
+                        transition: opacity .2s;
+                    }
+                }
+                .form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
+                    opacity: 1;
+                }
+            }
+
+            }
+            // width: 49%;
+            // display: inline-block;
+            // @include respond(tab-port) {
+            //     width: 100%;
+            //     margin-bottom: 2rem;
+            
+        }
+
+        
+
+    p {
+        font-size: 2rem;
+    }
+}
+
 
 .alert {
     width: auto;
@@ -559,6 +644,12 @@ body {
         animation: moveDown .5s ease-out .75s;
         animation-fill-mode: backwards;
     }
+}
+.btn-outline-success {
+    border: 1px solid rgb(40, 167, 69);
+}
+.btn-outline-danger {
+    border: 1px solid rgb(220, 53, 69);
 }
 
 .btn-text {
