--- a/src/styles.scss
+++ b/src/styles.scss
@@ -130,7 +130,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     line-height: 1.6;
-    color: var(--color-grey-dark-2);
+    color: $color-black;
     background-image: linear-gradient(to right bottom, var(--color-primary), var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
