--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -494,9 +494,15 @@ body {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        @include respond(phone) {
+            width: 100%;
+            flex-direction: column;
+            text-align: center;
+        }
         .answer-box {
             display: flex;
             flex-direction: row;
+            justify-content: center;
             .answer {
                 &:not(:last-child) {
                     margin-right: 2rem;
@@ -511,6 +517,9 @@ body {
                     cursor: pointer;
                     position: relative;
                     padding-right: 2.5rem;
+                    @include respond(phone) {
+                        font-size: 2.3rem;
+                    }
                 }
                 .form__radio-button {
                     height: 2rem;
@@ -521,6 +530,13 @@ body {
                     position: absolute;
                     right: 0;
                     top: .2rem;
+
+                    @include respond(phone) { 
+                        height: 2.5rem;
+                        width: 2.5rem;
+                        right: -4px;
+                        top: 0.6rem;
+                    }
             
                     &::after {
                         content: "";
