--- a/src/app/components/info/info.component.scss
+++ b/src/app/components/info/info.component.scss
@@ -498,6 +498,7 @@ body {
         @include respond(phone) {
             width: 100%;
             flex-direction: column;
+            align-items: inherit;
             text-align: left;
         }
         .question {
